# ConSBind

./: .gitignore  Analysis.ipynb  Analysis.py  ConSBind_Tutorial.ipynb  ConSBind_Tutorial_Enhanced.py  LICENSE  README.html  README.md  Theory.ipynb  Tutorial.ipynb  main.py  notebook_results_predicted_binding_sites.pse  notebook_results_predictions.txt  notebook_results_pymol.pml  pyproject.toml  setup.py
.ipynb_checkpoints/: ConSBind_Tutorial-checkpoint.ipynb  Tutorial-checkpoint.ipynb  tutorial2-checkpoint.ipynb  tutorial2-checkpoint.py
4dfr/: 4dfr_predicted_binding_sites.pse  4dfr_predictions.txt  4dfr_pymol.pml
4dfr_enzyme/: 1a01_predicted_binding_sites.pse  1stp_predicted_binding_sites.pse  4dfr_predicted_binding_sites.pse  4dfr_predictions.txt  4dfr_pymol.pml
ConSBind/: __init__.py
ConSBind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ConSBind/core/: __init__.py  finder.py  scoring.py  structure.py
ConSBind/input/: __init__.py  file_handler.py
ConSBind/output/: __init__.py  output.py
data/tutorial/: pdb1kqw.ent  pdb1opb.ent  pdb1sw2.ent  pdb1sw5.ent  pdb1y3n.ent  pdb1y3q.ent  pdb2rcq.ent
results/1stp/: 1stp_chimera.cmd  1stp_predicted_binding_sites.pse  1stp_predictions.txt  1stp_pymol.pml  1stp_spheres.bild  pdb1hsg_predicted_binding_sites.pse
results/analysis/: results_4A.csv  results_6A.csv
results/pdb1hsg/: pdb1hsg_chimera.cmd  pdb1hsg_predicted_binding_sites.pse  pdb1hsg_predictions.txt  pdb1hsg_pymol.pml  pdb1hsg_spheres.bild
results/pdb4dfr/: pdb4dfr_chimera.cmd  pdb4dfr_predictions.txt  (+2 more)
(+40 files in other folders)
